<resources>
    <string name="app_name">JankenApp</string>
    <string name="たたいてかぶって">たたいてかぶって</string>
    <string name="choki">チョキ</string>
    <string name="ruleImage">ruleImage</string>
    <string name="gu">グー</string>
    <string name="pa">パー</string>
    <string name="s" />
    <string name="Helmet">ヘルメット</string>
    <string name="result_draw">あいこです</string>
    <string name="jankenpon">じゃんけんポン</string>
    <string name="start">スタート</string>
    <string name="Rule">遊び方</string>
    <string name="Rank">ランキング</string>
    <string name="Back">タイトルに戻る</string>
    <string name="Easy">Easy</string>
    <string name="Normal">Normal</string>
    <string name="Hard">Hard</string>
    <string name="Endless">Endless</string>
    <string name="nanidowoerandene">難易度を選んでね</string>
    <string name="back">前へ</string>
    <string name="next">次へ</string>
    <string name="hummer">ハンマー</string>
</resources>