<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Endless">

    <ImageButton
        android:id="@+id/guButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/gu"
        android:scaleType="fitCenter"
        android:src="@drawable/janken_gu"
        app:layout_constraintBottom_toBottomOf="@+id/chokiButton"
        app:layout_constraintEnd_toStartOf="@+id/chokiButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chokiButton"
        tools:ignore="ImageContrastCheck,ImageContrastCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/chokiButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/choki"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player"
        app:srcCompat="@drawable/janken_choki"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/paButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/pa"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/chokiButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chokiButton"
        app:layout_constraintTop_toTopOf="@+id/chokiButton"
        app:srcCompat="@drawable/janken_pa"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/starttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/npc"
        tools:text="じゃんけん…" />

    <ImageSwitcher
        android:id="@+id/player"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="45dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starttext"
        tools:srcCompat="@drawable/janken_player1" />

    <ImageSwitcher
        android:id="@+id/npc"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/janken_npc" />

    <ImageButton
        android:id="@+id/helmetButton"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:contentDescription="@string/Helmet"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/player"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/npc"
        app:srcCompat="@drawable/helmet_bousai" />

    <ImageButton
        android:id="@+id/hummerButton"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:contentDescription="@string/hummer"
        android:scaleType="fitCenter"
        android:src="@drawable/pikopiko_hummer"
        app:layout_constraintBottom_toTopOf="@+id/player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/npc"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>